--- a/admin_film.html
+++ b/admin_film.html
@@ -13,6 +13,8 @@
       integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
       crossorigin="anonymous"
     />
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
+     integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
   </head>
 
   <body class="mainadmin">
@@ -50,6 +52,68 @@
 
     <div class="container">
       <div class="row">
+        <div class="card text-white bg-dark mb-3 col" style="width: 18rem">
+          <img src="./imagesfilms/see.jpg" class="card-img-top" alt="see" />
+          <div class="card-body">
+            <h5 class="card-title">see</h5>
+            <p class="card-text">
+              Some quick example text to build on the card title and make up the
+              bulk of the card's content.
+            </p>
+            <!-- <a href="#" class="btn btn-primary">Go somewhere</a> -->
+            <button type="button" class="btn btn-outline-light">Modify</button>
+            <button type="button" class="btn btn-outline-light">Manage</button>
+
+            <i class="bi bi-trash3 trash"></i>
+          </div>
+        </div>
+        <div class="card text-white bg-dark mb-3 col" style="width: 18rem">
+          <img src="./imagesfilms/see.jpg" class="card-img-top" alt="see" />
+          <div class="card-body">
+            <h5 class="card-title">see</h5>
+            <p class="card-text">
+              Some quick example text to build on the card title and make up the
+              bulk of the card's content.
+            </p>
+            <!-- <a href="#" class="btn btn-primary">Go somewhere</a> -->
+            <button type="button" class="btn btn-outline-light">Modify</button>
+            <button type="button" class="btn btn-outline-light"data-bs-toggle="modal"
+            data-bs-target="#exampleModal">Manage</button>
+            <i class="bi bi-trash3 trash"></i>
+          </div>
+        </div>
+        <div class="card text-white bg-dark mb-3 col" style="width: 18rem">
+          <img src="./imagesfilms/see.jpg" class="card-img-top" alt="see" />
+          <div class="card-body">
+            <h5 class="card-title">see</h5>
+            <p class="card-text">
+              Some quick example text to build on the card title and make up the
+              bulk of the card's content.
+            </p>
+            <!-- <a href="#" class="btn btn-primary">Go somewhere</a> -->
+            <button type="button" class="btn btn-outline-light">Modify</button>
+            <button type="button" class="btn btn-outline-light"data-bs-toggle="modal"
+            data-bs-target="#exampleModal">Manage</button>
+            <i class="bi bi-trash3 trash"></i>
+          </div>
+        </div>
+        <div class="card text-white bg-dark mb-3 col" style="width: 18rem">
+          <img src="./imagesfilms/see.jpg" class="card-img-top" alt="see" />
+          <div class="card-body">
+            <h5 class="card-title">see</h5>
+            <p class="card-text">
+              Some quick example text to build on the card title and make up the
+              bulk of the card's content.
+            </p>
+            <!-- <a href="#" class="btn btn-primary">Go somewhere</a> -->
+            <button type="button" class="btn btn-outline-light">Modify</button>
+            <button type="button" class="btn btn-outline-light" data-bs-toggle="modal"
+            data-bs-target="#exampleModal">Manage</button>
+            <i class="bi bi-trash3 trash"></i>
+          </div>
+        </div>
+      </div>
+      <div class="row"></div>
       <div class="card text-white bg-dark mb-3 col" style="width: 18rem">
         <img src="./imagesfilms/see.jpg" class="card-img-top" alt="see" />
         <div class="card-body">
@@ -60,67 +124,71 @@
           </p>
           <!-- <a href="#" class="btn btn-primary">Go somewhere</a> -->
           <button type="button" class="btn btn-outline-light">Modify</button>
-          <button type="button" class="btn btn-outline-light">Manage</button>
+          <button
+            type="button"
+            class="btn btn-outline-light"
+            data-bs-toggle="modal"
+            data-bs-target="#exampleModal"
+            
+          >
+            Manage
+          </button>
           <i class="bi bi-trash3 trash"></i>
         </div>
       </div>
-      <div class="card text-white bg-dark mb-3 col" style="width: 18rem">
-        <img src="./imagesfilms/see.jpg" class="card-img-top" alt="see" />
-        <div class="card-body ">
-          <h5 class="card-title">see</h5>
-          <p class="card-text">
-            Some quick example text to build on the card title and make up the
-            bulk of the card's content.
-          </p>
-          <!-- <a href="#" class="btn btn-primary">Go somewhere</a> -->
-          <button type="button" class="btn btn-outline-light">Modify</button>
-          <button type="button" class="btn btn-outline-light">Manage</button>
-          <i class="bi bi-trash3 trash"></i>
-        </div>
-      </div>
-      <div class="card text-white bg-dark mb-3 col" style="width: 18rem">
-        <img src="./imagesfilms/see.jpg" class="card-img-top" alt="see" />
-        <div class="card-body">
-          <h5 class="card-title">see</h5>
-          <p class="card-text">
-            Some quick example text to build on the card title and make up the
-            bulk of the card's content.
-          </p>
-          <!-- <a href="#" class="btn btn-primary">Go somewhere</a> -->
-          <button type="button" class="btn btn-outline-light">Modify</button>
-          <button type="button" class="btn btn-outline-light">Manage</button>
-          <i class="bi bi-trash3 trash"></i>
-        </div>
-      </div>
-      <div class="card text-white bg-dark mb-3 col" style="width: 18rem">
-        <img src="./imagesfilms/see.jpg" class="card-img-top" alt="see" />
-        <div class="card-body">
-          <h5 class="card-title">see</h5>
-          <p class="card-text">
-            Some quick example text to build on the card title and make up the
-            bulk of the card's content.
-          </p>
-          <!-- <a href="#" class="btn btn-primary">Go somewhere</a> -->
-          <button type="button" class="btn btn-outline-light">Modify</button>
-          <button type="button" class="btn btn-outline-light">Manage</button>
-          <i class="bi bi-trash3 trash"></i>
-        </div>
-        </div>
     </div>
-    <div class="row"></div>
-      <div class="card text-white bg-dark mb-3 col" style="width: 18rem">
-        <img src="./imagesfilms/see.jpg" class="card-img-top" alt="see" />
-        <div class="card-body">
-          <h5 class="card-title">see</h5>
-          <p class="card-text">
-            Some quick example text to build on the card title and make up the
-            bulk of the card's content.
-          </p>
-          <!-- <a href="#" class="btn btn-primary">Go somewhere</a> -->
-          <button type="button" class="btn btn-outline-light">Modify</button>
-          <button type="button" class="btn btn-outline-light">Manage</button>
-          <i class="bi bi-trash3 trash"></i>
-        </div>
+
+
+    <!-- Vertically centered scrollable modal -->
+    <div
+      class="modal fade"
+      id="exampleModal"
+      tabindex="-1"
+      aria-labelledby="exampleModalLabel"
+      aria-hidden="true"
+    >
+      <div class="modal-dialog modal-dialog-centered modal-dialog-scrollable">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h5 class="modal-title" id="exampleModalLabel">Timeline</h5>
+            <button
+              type="button"
+              class="btn-close"
+              data-bs-dismiss="modal"
+              aria-label="Close"
+            ></button>
+          </div>
+          <div class="modal-body">
+            <button type="button" class="goright btn btn-secondary">Add</button>
+            <table class="table table-dark table-hover">
+              <thead>
+                <tr>
+                  <th scope="col">#</th>
+                  <th scope="col">date</th>
+                  <th scope="col">time</th>
+                  <th scope="col"></th>
+                </tr>
+              </thead>
+              <tbody>
+                <tr>
+                  <th scope="row">1</th>
+                  <td>13/07/2023</td>
+                  <td>14h</td>
+                  <td><i class="bi bi-trash3 trash"></i></td>
+                </tr>
+              </tbody>
+            </table>
+          </div>
+          <div class="modal-footer">
+            <button
+              type="button"
+              class="btn btn-secondary"
+              data-bs-dismiss="modal"
+            >
+              Close
+            </button>
+            <button type="button" class="btn btn-dark">Save changes</button>
+          </div>
         </div>
       </div>
     </div>
