--- a/admin_salles.html
+++ b/admin_salles.html
@@ -51,6 +51,7 @@
           <th scope="col">#</th>
           <th scope="col">Name</th>
           <th scope="col">City</th>
+          <th scope="col">Capacity</th>
           <th scope="col"></th>
           <th scope="col"></th>
           <th scope="col"></th>
@@ -61,6 +62,7 @@
           <th scope="row">1</th>
           <td>Mark</td>
           <td>Otto</td>
+          <td>26</td>
           <td>
             <button type="button" class="btn btn-outline-light">Modify</button>
           </td>
@@ -79,6 +81,7 @@
           <th scope="row">2</th>
           <td>Jacob</td>
           <td>Thornton</td>
+          <td>26</td>
           <td>
             <button type="button" class="btn btn-outline-light">Modify</button>
           </td>
@@ -96,6 +99,7 @@
         <tr>
           <th scope="row">3</th>
           <td colspan="2">Larry the Bird</td>
+          <td>26</td>
           <td>
             <button type="button" class="btn btn-outline-light">Modify</button>
           </td>
