--- a/admin_film.html
+++ b/admin_film.html
@@ -35,12 +35,10 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
           <div class="navbar-nav">
-            <a class="nav-link active" aria-current="page" href="admin.html"
-              >Home</a
-            >
-            <a class="nav-link" href="#">Utilisateurs</a>
-            <a class="nav-link" href="#">Réservations</a>
-            <a class="nav-link" href="admin_salles.html">Salles</a>
+            <a class="nav-link" aria-current="page" href="admin.html">Home</a>
+            <a class="nav-link" href="admin_utilisateur.html">Users</a>
+            <a class="nav-link" href="admin_reservation.html">Reservations</a>
+            <a class="nav-link active" href="admin_salles.html">Cinemas</a>
           </div>
         </div>
       </div>
@@ -56,10 +54,6 @@
           <img src="./imagesfilms/see.jpg" class="card-img-top" alt="see" />
           <div class="card-body">
             <h5 class="card-title">see</h5>
-            <p class="card-text">
-              Some quick example text to build on the card title and make up the
-              bulk of the card's content.
-            </p>
             <!-- <a href="#" class="btn btn-primary">Go somewhere</a> -->
             <button type="button" class="btn btn-outline-light">Modify</button>
             <button type="button" class="btn btn-outline-light">Manage</button>
@@ -71,10 +65,6 @@
           <img src="./imagesfilms/see.jpg" class="card-img-top" alt="see" />
           <div class="card-body">
             <h5 class="card-title">see</h5>
-            <p class="card-text">
-              Some quick example text to build on the card title and make up the
-              bulk of the card's content.
-            </p>
             <!-- <a href="#" class="btn btn-primary">Go somewhere</a> -->
             <button type="button" class="btn btn-outline-light">Modify</button>
             <button type="button" class="btn btn-outline-light"data-bs-toggle="modal"
@@ -86,10 +76,6 @@
           <img src="./imagesfilms/see.jpg" class="card-img-top" alt="see" />
           <div class="card-body">
             <h5 class="card-title">see</h5>
-            <p class="card-text">
-              Some quick example text to build on the card title and make up the
-              bulk of the card's content.
-            </p>
             <!-- <a href="#" class="btn btn-primary">Go somewhere</a> -->
             <button type="button" class="btn btn-outline-light">Modify</button>
             <button type="button" class="btn btn-outline-light"data-bs-toggle="modal"
@@ -101,10 +87,6 @@
           <img src="./imagesfilms/see.jpg" class="card-img-top" alt="see" />
           <div class="card-body">
             <h5 class="card-title">see</h5>
-            <p class="card-text">
-              Some quick example text to build on the card title and make up the
-              bulk of the card's content.
-            </p>
             <!-- <a href="#" class="btn btn-primary">Go somewhere</a> -->
             <button type="button" class="btn btn-outline-light">Modify</button>
             <button type="button" class="btn btn-outline-light" data-bs-toggle="modal"
@@ -118,10 +100,6 @@
         <img src="./imagesfilms/see.jpg" class="card-img-top" alt="see" />
         <div class="card-body">
           <h5 class="card-title">see</h5>
-          <p class="card-text">
-            Some quick example text to build on the card title and make up the
-            bulk of the card's content.
-          </p>
           <!-- <a href="#" class="btn btn-primary">Go somewhere</a> -->
           <button type="button" class="btn btn-outline-light">Modify</button>
           <button
@@ -150,7 +128,7 @@
       <div class="modal-dialog modal-dialog-centered modal-dialog-scrollable">
         <div class="modal-content">
           <div class="modal-header">
-            <h5 class="modal-title" id="exampleModalLabel">Timeline</h5>
+            <h5 class="modal-title header4" id="exampleModalLabel">Timeline</h5>
             <button
               type="button"
               class="btn-close"
