--- a/admin_utilisateur.html
+++ b/admin_utilisateur.html
@@ -34,14 +34,14 @@
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
           <div class="navbar-nav">
             <a class="nav-link" aria-current="page" href="admin.html">Home</a>
-            <a class="nav-link" href="admin_utilisateur.html">Users</a>
+            <a class="nav-link active" href="admin_utilisateur.html">Users</a>
             <a class="nav-link" href="admin_reservation.html">Reservations</a>
-            <a class="nav-link active" href="admin_salles.html">Cinemas</a>
+            <a class="nav-link" href="admin_salles.html">Cinemas</a>
           </div>
         </div>
       </div>
     </nav>
-    <p class="h4 header4">Cinema management</p>
+    <p class="h4 header4">Users management</p>
     <div class="add">
       <button type="button" class="btn btn-outline-light">Add</button>
     </div>
@@ -49,9 +49,9 @@
       <thead>
         <tr>
           <th scope="col">#</th>
-          <th scope="col">Name</th>
-          <th scope="col">City</th>
-          <th scope="col">Capacity</th>
+          <th scope="col">FullName</th>
+          <th scope="col">@Mail</th>
+          <th scope="col">Password</th>
           <th scope="col"></th>
           <th scope="col"></th>
           <th scope="col"></th>
@@ -63,18 +63,8 @@
           <td>Mark</td>
           <td>Otto</td>
           <td>26</td>
-          <td>
-            <button type="button" class="btn btn-outline-light">Modify</button>
-          </td>
-          <td>
-            <button
-              type="button"
-              class="btn btn-outline-light"
-              onclick="window.location.href='./admin_film.html';"
-            >
-              Manage
-            </button>
-          </td>
+          <td></td>
+          <td></td>
           <td><i class="bi bi-trash3 trash"></i></td>
         </tr>
         <tr>
@@ -82,39 +72,19 @@
           <td>Jacob</td>
           <td>Thornton</td>
           <td>26</td>
-          <td>
-            <button type="button" class="btn btn-outline-light">Modify</button>
-          </td>
-          <td>
-            <button
-              type="button"
-              class="btn btn-outline-light"
-              onclick="window.location.href='./admin_film.html';"
-            >
-              Manage
-            </button>
-          </td>
+          <td></td>
+          <td></td>
           <td><i class="bi bi-trash3 trash"></i></td>
         </tr>
         <tr>
           <th scope="row">3</th>
           <td colspan="2">Larry the Bird</td>
           <td>26</td>
-          <td>
-            <button type="button" class="btn btn-outline-light">Modify</button>
-          </td>
-          <td>
-            <button
-              type="button"
-              class="btn btn-outline-light"
-              onclick="window.location.href='./admin_film.html';"
-            >
-              Manage
-            </button>
-          </td>
+          <td></td>
+          <td></td>
           <td><i class="bi bi-trash3 trash"></i></td>
         </tr>
       </tbody>
     </table>
   </body>
-</html>
+  </html>
