--- a/admin.html
+++ b/admin.html
@@ -15,7 +15,7 @@
     />
   </head>
 
-  <body class="mainadmin">
+  <body class="mainadmin homeadmin">
     <!-- Create the navigation bar-->
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
       <div class="container-fluid">
@@ -33,15 +33,19 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
           <div class="navbar-nav">
-            <a class="nav-link active" aria-current="page" href="admin.html"
-              >Home</a
-            >
-            <a class="nav-link" href="#">Utilisateurs</a>
-            <a class="nav-link" href="#">Réservations</a>
-            <a class="nav-link" href="admin_salles.html">Salles</a>
+            <a class="nav-link active" aria-current="page" href="admin.html">Home</a>
+            <a class="nav-link" href="admin_utilisateur.html">Users</a>
+            <a class="nav-link" href="admin_reservation.html">Reservations</a>
+            <a class="nav-link" href="admin_salles.html">Cinemas</a>
           </div>
         </div>
       </div>
     </nav>
+    <div class="content">
+      <h1>Welcom to Reservio</h1>
+      <p class="parag">you can manage the site here</p>
+      </div>
+      </div>
+    </content>
   </body>
 </html>
